Fix text-centering on mobile

--- a/park-city-express/styles/template.css
+++ b/park-city-express/styles/template.css
@@ -31,6 +31,16 @@ p {
 	font-size: 16px;
 }
 
+@media all and (max-width:768px){
+	h1 {
+		text-align: center;
+	}
+	p.lead {
+		text-align:center;
+		font-size:20px;
+	}
+}
+
 /* NAVBAR */
 
 .navbar {
